<resources>
    <string name="app_name">Controle de Entrada via Bluetooth</string>
    <string name="btnOn">Ligar Bluetooth</string>
    <string name="btn_off">Desligar Bluetooth</string>
    <string name="btn_visible">Ficar visível</string>
    <string name="tv_paired">Dispositivos pareados:</string>
    <string name="btn_devices">Dispositivos pareados</string>
    <string name="btn_descobrir">Iniciar descoberta de dispositivos</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_led_control">LedControl</string>
    <string name="title_activity_oppen_control">OppenControl</string>
    <string name="ledOn">ON</string>
    <string name="ledOff">OFF</string>
    <string name="disconnect">Disconnect</string>
    <string name="ledControl">LED Control</string>
    <string name="stringLedControl">LED CONTROL</string>
    <string name="statusMessage">Status</string>
</resources>
