<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.novoexample.controleEntrada.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnOn"
            android:clickable="true"
            android:layout_marginTop="20dp"
            android:id="@+id/button_on"
            android:onClick="on"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_off"
            android:id="@+id/button_off"
            android:onClick="off"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_visible"
            android:id="@+id/button_visible"
            android:layout_gravity="center_horizontal"
            android:onClick="visible"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_devices"
            android:onClick="searchPairedDevices"
            android:layout_marginTop="20dp"
            android:id="@+id/button_devices" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_descobrir"
            android:onClick="discoverDevices"
            android:layout_marginTop="20dp"
            android:id="@+id/btn_descobrir"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/statusMessage"
            android:id="@+id/statusMessage"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp" />

    </LinearLayout>

</RelativeLayout>
