<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.novoexample.controleEntrada.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/stringLedControl"
            android:id="@+id/textView_ledControl"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Status"
            android:id="@+id/statusMessageOppen"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ledOn"
            android:onClick="turnOnLed"
            android:layout_marginTop="60dp"
            android:id="@+id/button_onLed" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ledOff"
            android:onClick="turnOffLed"
            android:id="@+id/button_offLed"
            android:layout_marginTop="60dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            android:onClick="Disconnect"
            android:id="@+id/button_disconnect"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>
</RelativeLayout>